# corelib-c-cpp

./: .gitignore  CMakeLists.txt  CONFORMANCE_GAP_ANALYSIS.md  Doxyfile.in  README.md  conanfile.py  corelib-c-cpp.code-workspace  coverage-c.json  library.json  library.properties  project.code-workspace
.devcontainer/: Dockerfile  attach.sh  devcontainer.json  start.sh
.github/workflows/: build-clang-x86_64.yaml  build-cpp-feature-matrix.yaml  build-doxygen.yaml  build-feature-matrix.yaml  build-gcc-aarch64.yaml  build-gcc-armv5t.yaml  build-gcc-avr.yaml  build-gcc-cortex-m.yaml  build-gcc-mips.yaml  build-gcc-powerpc.yaml  build-gcc-riscv64.yaml  build-gcc-rl78.yaml  build-gcc-x86_64.yaml  callgrind-gate.yml  clang-tidy.yaml  coverage.yaml  version-consistency.yaml
assets/: README.md  test_vectors.json  test_vectors_README.md
bench/: CMakeLists.txt  run_callgrind.sh
bench/c/: bench.c  perf.c
bench/cpp/: bench.cpp  perf.cpp
cmake/: sofa-buffers-corelib-c-cpp-config.cmake.in  sofab_install.cmake
cpp20/: CMakeLists.txt  README.md
cpp20/bench/: bench.cpp
cpp20/include/sofab/: sofab.hpp
ports/sofa-buffers-corelib-c-cpp/: portfile.cmake  usage  vcpkg.json
src/: CMakeLists.txt  istream.c  object.c  ostream.c  utf8.c
src/include/sofab/: istream.h  object.h  ostream.h  sofab.h  sofab.hpp  utf8.h
test/c/: CMakeLists.txt  main.c  test_istream.c  test_object.c  test_ostream.c  test_utf8.c  test_vectors.c  vectors_main.c
test/cpp/: CMakeLists.txt  main.cpp  test_istream.cpp  test_ostream.cpp  test_vectors.cpp
test/cpp-smoke/: CMakeLists.txt  smoke.cpp
test/fuzz/: CMakeLists.txt  main.c
test/shared/: sofab_test_vectors.c  sofab_test_vectors.h
test/vectorgen/: CMakeLists.txt  README.md  gen_vectors.c
test/vectors/: CMakeLists.txt  README.md  check_vectors.cmake
tools/: footprint.sh
utils/: linker-avr.ld  linker-cortex-m.ld  newlib_stubs.c  startup.c  toolchain-arm-none-eabi.cmake  toolchain-avr.cmake  toolchain-rl78.cmake
utils/avr/: linker-avr.ld  startup.c  toolchain-avr.cmake
utils/cortex-m/: linker-cortex-m.ld  newlib_stubs.c  startup.c  toolchain-arm-none-eabi.cmake
utils/rl78/: linker-rl78.ld  newlib_stubs.c  startup.c  toolchain-rl78.cmake
